# LCE-Emerald-Launcher

./: README.md  RELEASE_NOTES.md  decode_hex.py  package-lock.json  package.json  parse_codec.py  pnpm-lock.yaml
.github/workflows/: experimental.yml  publish.yml
flatpak/: io.github.Emerald_Legacy_Launcher.Emerald_Legacy_Launcher.metainfo.xml
plugins/multiplayer-button/: meta.json
public/music/: Moog City 2.opus
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  playtime.rs  state.rs  types.rs  util.rs  workshop_server.rs
src-tauri/src/commands/: bridge.rs  config.rs  download.rs  file_dialogs.rs  game.rs  macos_setup.rs  mod.rs  plugins.rs  proxy_cmd.rs  runners.rs  skin.rs  steam.rs  workshop.rs
src-tauri/src/lce_bridge/: bridge.rs  chunk.rs  config.rs  crafting.rs  java_protocol.rs  java_session.rs  lce_codec.rs  lce_packets.rs  mod.rs  msa_auth.rs  registry.rs  util.rs
src-tauri/src/networking/: direct.rs  mod.rs  relay.rs  stun.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/common/: AchievementToast.tsx  PanoramaBackground.tsx  ScreenshotImage.tsx  SkinViewer.tsx
src/components/modals/: ChooseInstanceModal.tsx  PlaytimeModal.tsx  SetUidModal.tsx
src/components/views/: CreditsView.tsx  HomeView.tsx  LceLiveView.tsx  ScreenshotsView.tsx  SettingsView.tsx  SkinsView.tsx  VersionsView.tsx  WorkshopView.tsx
src/context/: LauncherContext.tsx
src/css/: index.css
src/data/: splashes.ts
src/hooks/: useAppConfig.ts  useAudioController.ts  useDiscordRPC.ts  useGameManager.ts  useLceLiveNotifications.ts  useUpdateCheck.ts
src/pages/: App.tsx
src/plugins/: PluginManager.ts
src/services/: LceLiveService.ts  RpcService.ts  TauriService.ts
